# course-companion-fte-hackathon-iv

./: .claudeignore  PHASE2_IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QWEN.md
.claude/: plan.md
specs/phase1/: 00-ARCHITECTURE-DECISIONS.md  08-INTEGRATION-SPEC.md
specs/phase2/: 00-ARCHITECTURE-DECISIONS.md
src/backend/: .dockerignore  .env  .env.example  DEPLOY.md  Dockerfile  pyproject.toml  railway.toml  requirements.txt
src/backend/app/: __init__.py  config.py  database.py  main.py
src/backend/app/api/: __init__.py
src/backend/app/api/v1/: __init__.py  access.py  content.py  navigation.py  progress.py  quiz.py  search.py
src/backend/app/api/v2/: __init__.py  learning.py  router.py
src/backend/app/core/: __init__.py  auth.py  cache.py  deps.py  exceptions.py  llm_gateway.py  r2.py
src/backend/app/models/: __init__.py  achievement.py  content.py  progress.py  quiz.py  user.py
src/backend/app/schemas/: __init__.py  achievement.py  common.py  content.py  learning.py  progress.py  quiz.py
src/backend/app/scripts/: __init__.py  seed_data.py
src/backend/app/static/: ai-plugin.json
src/backend/chatgpt-app/: gpt-instructions.md
src/backend/sample-content/chapters/: ch1-intro-to-agents.md
src/backend/scripts/: init_db.py
src/backend/tests/: conftest.py
src/backend/tests/integration/: test_api_endpoints.py  test_v2_adaptive_learning.py
src/backend/tests/unit/: test_models.py
src/chatgpt-app/: IMPLEMENTATION_SUMMARY.md  README.md  action_manifest.json  api_client.py  config.json  requirements.txt  skill_routing.py  test_app.py
(+51 files in other folders)
